sap/4.2/modules/ROOT/pages/sap-connector-xml-maven.adoc
= SAP XML and Maven Support - Mule 4

If you manually code a Mule application in XML either from the Anypoint Studio XML editor
or from a text editor, you can get access to the SAP Connector in your app by adding reference
statements to your XML Mule flow and in the Apache Maven `pom.xml` file.

[NOTE]
====
You can avoid the manual process described in this topic by using Anypoint Studio. When you install the SAP Connector in Anypoint Studio, Studio automatically populates the XML code with the connector namespace and schema location, and adds a dependency to the pom.xml file.
====

== Add a Namespace for the Connector

. Copy the following code:
+
[source,xml,linenums]
----
<mule xmlns:sap="http://www.mulesoft.org/schema/mule/sap"
http://www.mulesoft.org/schema/mule/sap
http://www.mulesoft.org/schema/mule/sap/current/mule-sap.xsd
----
+
. Paste these statements inside the `<mule>` tag of the header of your Mule XML flow:
+
[source,xml,linenums]
----
<mule xmlns:sap="http://www.mulesoft.org/schema/mule/sap"
xmlns:ee="http://www.mulesoft.org/schema/mule/ee/core"
xmlns:http="http://www.mulesoft.org/schema/mule/http"
xmlns:file="http://www.mulesoft.org/schema/mule/file"
xmlns="http://www.mulesoft.org/schema/mule/core"
xmlns:doc="http://www.mulesoft.org/schema/mule/documentation"
xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
xsi:schemaLocation="http://www.mulesoft.org/schema/mule/core
http://www.mulesoft.org/schema/mule/core/current/mule.xsd
http://www.mulesoft.org/schema/mule/file
http://www.mulesoft.org/schema/mule/file/current/mule-file.xsd
http://www.mulesoft.org/schema/mule/http
http://www.mulesoft.org/schema/mule/http/current/mule-http.xsd
http://www.mulesoft.org/schema/mule/ee/core
http://www.mulesoft.org/schema/mule/ee/core/current/mule-ee.xsd
http://www.mulesoft.org/schema/mule/sap
http://www.mulesoft.org/schema/mule/sap/current/mule-sap.xsd">
----

== Add a POM File Dependency

The pom.xml Maven file generated by Anypoint Studio contains dependencies for a Mule app.
. When you code a Mule app manually, include this XML snippet in your pom.xml file to enable access to this connector. The Mule runtime engine translates the `RELEASE` dependency keyword to the current version.
+
[source,xml,linenums]
----
<dependency>
  <groupId>com.mulesoft.connectors</groupId>
  <artifactId>mule-sap-connector</artifactId>
  <version>5.1</version>
  <classifier>mule-plugin</classifier>
</dependency>
----
+
. (Optional) To set `<version>` to a specific SAP Connector release, access the SAP Connector in
https://www.mulesoft.com/exchange/com.mulesoft.connectors/mule-sap-connector/[Anypoint Exchange] and click *Dependency Snippets*. If you use
+
. For JCo library support, add these dependencies:
+
[source,xml,linenums]
----
<build>
    <plugins>
        <plugin>
            <groupId>org.mule.tools.maven</groupId>
            <artifactId>mule-maven-plugin</artifactId>
            <version>${mule.maven.plugin.version}</version>
            <extensions>true</extensions>
            <configuration>
                <sharedLibraries>
                    <sharedLibrary>
                        <groupId>com.sap.conn.jco</groupId>
                        <artifactId>com.sap.conn.jco.sapjco3</artifactId>
                    </sharedLibrary>
                    <sharedLibrary>
                        <groupId>com.sap.conn.idoc</groupId>
                        <artifactId>com.sap.conn.idoc.sapidoc3</artifactId>
                    </sharedLibrary>
                    <sharedLibrary>
                        <groupId>com.sap.conn.jco</groupId>
                        <artifactId>com.sap.conn.jco.libsapjco3</artifactId>
                    </sharedLibrary>
                </sharedLibraries>
            </configuration>
        </plugin>
    </plugins>
</build>
----

== Next

After completing your namespace and pom.xml file, you experiment with the SAP xref:sap-connector-examples.adoc[Examples].

== See Also

https://help.mulesoft.com[MuleSoft Help Center]
